--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "mWeather",
   "short_name": "mWeather",
-  "start_url": "./index.html",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#0b131e",
   "theme_color": "#0b131e",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "./asset/app-icon-192.png",
+      "src": "/asset/app-icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./asset/app-icon-512.png",
+      "src": "/asset/app-icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
